First commited as before_57346_rev1